--- a/package.json
+++ b/package.json
@@ -10,8 +10,26 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.4.5",
+    "@react-native-community/netinfo": "^11.1.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.1",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-native": "0.73.2",
+    "react-i18next": "^13.4.1",
+    "react-native-dotenv": "^3.4.9",
+    "react-native-gesture-handler": "^2.13.4",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-mmkv": "^2.11.0",
+    "react-native-reanimated": "^3.5.4",
+    "react-native-restart": "^0.0.27",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0",
+    "react-native-toast-message": "^2.2.0",
+    "react-redux": "^8.1.3",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
